@@ -10,6 +10,7 @@ version 0.8 - xxx
  . Demos: Added PerformanceParticleTest (issue #331)
  . Director: "new" Fast Director. Attach/Detach, auto-lock, SDK 3.0 works (issue #145, #issue #239, issue #340)
  . LabelAtlas: don't render in subpixel (issue #135)
+ . ParallaxNode: parallax code refactored (issue #358)
  . Particles: Added QuadParticleSystem. renamed ParticleSystem to PointParticleSystem (issue #245)
  . Particles: added support for endSize and endSizeVar (issue #241)
  . Particles: added support for start/end/var spinning (issue #335)
